--- a/session_4_homework/index.css
+++ b/session_4_homework/index.css
@@ -1,173 +1,8 @@
 @import "css/navbar.css";
+@import "css/form.css";
 
 * {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-}
-
-.hero {
-  height: 100%;
-  width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(./images/banner.jpg);
-  background-position: center;
-  background-size: cover;
-  position: absolute;
-  display: flex;
-  align-items: center;
-}
-
-.form-box {
-  width: 380px;
-  height: 530px;
-  position: relative;
-  margin: 6% auto;
-  background: #fff;
-  padding: 5px;
-  overflow: hidden;
-}
-
-.logo-form {
-  display: block;
-  margin: 10px auto 5px;
-}
-
-.button-box {
-  width: 220px;
-  margin: 15px auto 20px;
-  position: relative;
-  box-shadow: 0 0 20px 9px #ff61241f;
-  border-radius: 30px;
-}
-
-.toggle-btn {
-  padding: 10px 30px;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-  outline: none;
-  position: relative;
-  color: #4f959b;
-  letter-spacing: 0.3px;
-  font-weight: 700;
-}
-
-#btn {
-  top: 0;
-  left: 0;
-  position: absolute;
-  width: 110px;
-  height: 100%;
-  background: linear-gradient(to right, #ff105f, #ffad06);
-  border-radius: 30px;
-  transition: 0.5s;
-}
-
-.social-icons {
-  margin: 20px auto;
-  text-align: center;
-}
-
-.social-icons img {
-  width: 30px;
-  margin: 0 12px;
-  box-shadow: 0 0 20px 0 #7f7f7f3d;
-  cursor: pointer;
-  border-radius: 50%;
-}
-
-.input-group {
-  margin: 0 auto;
-  top: 160px;
-  width: 280px;
-  transition: 0.5s;
-}
-
-.input-field {
-  border: 2px solid #f0f0f0;
-  border-radius: 4px;
-  display: block;
-  font-family: inherit;
-  font-size: 14px;
-  padding: 10px;
-  width: 92%;
-}
-
-.input-field:focus {
-  outline: 0;
-  border-color: #777;
-}
-
-.submit-btn {
-  width: 85%;
-  padding: 10px 30px;
-  cursor: pointer;
-  display: block;
-  margin: auto;
-  background: linear-gradient(to right, #ff105f, #ffad06);
-  border: 0;
-  outline: none;
-  border-radius: 30px;
-  font-weight: 700;
-  font-size: 15px;
-  color: #fff;
-}
-
-.check-box {
-  margin: 15px 10px 30px 0;
-}
-
-span {
-  color: #777;
-  font-size: 12px;
-  bottom: 63px;
-  position: absolute;
-}
-
-.box {
-  margin-bottom: 35px;
-  position: relative;
-}
-
-.feedback {
-  color: green;
-  text-align: center;
-}
-
-.box.success input {
-  border-color: #2ecc71;
-}
-
-.box.error input {
-  border-color: #e74c3c;
-}
-
-.box i {
-  visibility: hidden;
-  position: absolute;
-  top: 12px;
-  right: 5px;
-}
-
-.box.success i.fa-check-circle {
-  color: #2ecc71;
-  visibility: visible;
-}
-
-.box.error i.fa-exclamation-circle {
-  color: #e74c3c;
-  visibility: visible;
-}
-
-.box small {
-  color: #e74c3c;
-  position: absolute;
-  bottom: -22px;
-  left: 10px;
-  visibility: hidden;
-}
-
-.box.error small {
-  visibility: visible;
 }
